Slider/Slider.module.less
// Slider.module.less
//
@import "../styles/mixins.less";
@import "../styles/motion-mixins.less";
@import "../styles/variables.less";
@import "../styles/skin.less";

.slider {
	position: relative;
	margin: 0 @lime-spotlight-outset;
	// Set both the V and H sizes here, so they can be easily overridden, both internally below and by component consumers.
	height: @lime-slider-bar-height;
	width: @lime-slider-bar-height;
	box-sizing: content-box;
	direction: ltr;
	touch-action: none;

	.progressBar {
		position: relative;
		height: 100%;
		width: 100%;

		.bar {
			border-radius: @lime-progressbar-bar-border-radius;
			overflow: hidden;
		}
	}

	.knob {
		--lime-tooltip-offset: @lime-slider-tooltip-offset;

		position: absolute;
		will-change: transform;

		&::before {
			content: "";
			position: absolute;
			height: @lime-slider-knob-height;
			width: @lime-slider-knob-width;
			border-radius: (@lime-slider-knob-height / 2);
			border: @lime-button-border-width solid transparent;
			box-sizing: border-box;
			will-change: transform;
			.lime-slider-focus-out-motion();
		}
	}

	&.showAnchor {
		.knob {
			z-index: 1;
		}

		.progressBar {
			&::after {
				content: "";
				position: absolute;
				transform: @lime-translate-center;
			}

			&.horizontal {
				&::after {
					width: @lime-progressbar-anchor-width;
					height: @lime-progressbar-anchor-height;
					top: 50%;
					left: ~"calc(var(--ui-progressbar-proportion-anchor) * 100%)";
				}
			}

			&.vertical {
				&::after {
					width: @lime-progressbar-anchor-height;
					height: @lime-progressbar-anchor-width;
					bottom: ~"calc(var(--ui-progressbar-proportion-anchor) * 100%)";
					left: 50%;
					transform: translate(-50%, 50%);
				}
			}
		}
	}

	.disabled({
		touch-action: auto;
	});

	.minMax {
		display: flex;
		justify-content: space-between;
		font-size: @lime-slider-min-max-font-size;
		font-weight: @lime-slider-min-max-font-weight;
		line-height: @lime-slider-min-max-line-height;
	}

	.lime-custom-text({
		.minMax {
			font-size: @lime-slider-min-max-font-size-large;
			line-height: @lime-slider-min-max-line-height-large;
		}
	});

	&.horizontal {
		@h-gap: (@lime-slider-knob-width / 2);
		@v-gap: @lime-slider-bar-padding;
		width: auto;
		padding: @v-gap @h-gap;

		.fill,
		.load {
			height: 100%;
		}

		.knob {
			left: ~"calc(var(--ui-slider-proportion-end-knob) * 100%)";
		}

		&.hasMinMax {
			padding-bottom: @lime-slider-bar-min-max-padding-bottom;
		}

		.minMax {
			margin-top: @lime-slider-min-max-margin-top;
		}
	}

	&.vertical {
		@h-gap: (@lime-slider-knob-height - @lime-slider-bar-height);
		@v-gap: (@lime-slider-knob-width / 2);
		padding: @v-gap @h-gap;
		min-height: @lime-slider-bar-vertical-min-height;
		display: inline-block;
		vertical-align: top;

		.fill,
		.load {
			width: 100%;
		}

		.knob {
			bottom: ~"calc(var(--ui-slider-proportion-end-knob) * 100%)";
			top: auto;
		}

		&.hasMinMax {
			display: flex;
			flex-direction: row;
			width: fit-content;

			.progressBar {
				width: @lime-slider-bar-height;
				flex-shrink: 0;
			}
		}

		.minMax {
			flex-direction: column-reverse;
			margin-left: @lime-slider-vertical-min-max-margin-left;
		}

	}

	&.colorPicker {
		@cp-v-gap: ((@lime-slider-color-picker-knob-container-size - @lime-slider-color-picker-bar-height) / 2);
		@cp-h-gap: (@lime-slider-color-picker-knob-container-size / 2);
		align-self: center;

		.knob {
			--lime-tooltip-offset: @cp-h-gap;
		}

		.knob::before {
			height: @lime-slider-knob-width;
			width: @lime-slider-knob-width;
			border-radius: (@lime-slider-knob-width / 2);
		}

		&.horizontal {
			min-height: @lime-slider-color-picker-knob-container-size;
			padding: @cp-v-gap @cp-h-gap;

			.progressBar {
				height: @lime-slider-color-picker-bar-height;
				border-radius: @lime-slider-color-picker-bar-border-radius;

				.bar {
					border-radius: @lime-slider-color-picker-bar-border-radius;
				}
			}
		}

		&.vertical {
			padding: @cp-h-gap @cp-v-gap;

			.progressBar {
				width: @lime-slider-color-picker-bar-height;
				border-radius: @lime-slider-color-picker-bar-border-radius;

				.bar {
					border-radius: @lime-slider-color-picker-bar-border-radius;
				}
			}
		}
	}

	.applySkins({
		.bar {
			background-color: @lime-slider-track-color;
		}

		.fill {
			background-color: @lime-slider-track-active-color;
		}

		.load {
			background-color: @lime-slider-track-buffer-color;
		}

		.knob::before {
			background-color: @lime-slider-handle-color;
			border-color: @lime-slider-handle-border-color;
		}

		:global(.spotlight-input-mouse) & {
			&:hover:not([disabled]):not(.colorPicker) {
				.knob::before {
					.lime-slider-focus-in-motion();
				}
			}
		}

		.focus({
			background-color: transparent;

			.fill {
				background-color: @lime-slider-track-active-color;
			}

			&:not(.colorPicker) {
				.knob {
					--lime-tooltip-offset: @lime-slider-tooltip-offset-focused;
				}

				.knob::before {
					background-color: @lime-slider-handle-focused-color;
					border-color: @lime-slider-handle-focused-border-color;
					box-shadow: @lime-slider-handle-focused-shadow;
					.lime-slider-focus-in-motion();
				}

				&:active,
				&.pressed {
					.knob::before {
						.lime-slider-press-motion();
					}
				}

				&:not(.pressed) {
					.knob::before {
						.lime-slider-release-motion();
					}
				}

				.disabled({
					.knob::before {
						.lime-slider-focus-out-motion();
					}
				});
			}

			&.active,
			&.pressed {
				.fill {
					background-color: @lime-slider-track-active-focused-color;
				}
			}
		});

		:global(.spotlight-input-touch) &.pressed:not(.colorPicker) {
			.fill {
				background-color: @lime-slider-track-active-focused-color;
			}

			.knob::before {
				background-color: @lime-slider-handle-focused-color;
				border-color: @lime-slider-handle-focused-border-color;
				box-shadow: @lime-slider-handle-focused-shadow;
				.lime-slider-focus-in-motion();
			}
		}

		:global(.noAnimation) & {
			.focus({
				&:not(.colorPicker) {
					.knob::before {
						box-shadow: none;
					}

					&.active,
					&.pressed {
						.knob::before {
							transform: @lime-translate-center;
						}
					}
				}
			});

			:global(.spotlight-input-touch) &.pressed:not(.colorPicker) {
				.knob::before {
					box-shadow: none;
					transform: @lime-translate-center;
				}
			}
		}

		.disabled({
			opacity: @lime-slider-disabled-bar-opacity;

			.knob::before {
				background-color: @lime-slider-handle-disabled-color;
				border-color: @lime-slider-handle-border-color;
			}

			&.showAnchor {
				.progressBar {
					&::after {
						opacity: @lime-slider-disabled-bar-opacity;
					}
				}
			}
		});

		&.noFill {
			.fill {
				background-color: transparent;
			}

			.focus({
				&,
				&.active,
				&.pressed {
					.fill {
						background-color: transparent;
					}
				}
			});
		}

		&.colorPicker {
			@cp-f-tooltip-offset: (@lime-slider-color-picker-knob-container-size-focused / 2);

			.bar,
			.fill,
			.load {
				background-color: transparent;
			}

			.knob::before {
				background-color: var(--semantic-color-surface-default-handle);
				border-width: 0;
				outline: @lime-slider-color-picker-knob-outline-width solid @lime-slider-handle-colorPicker-outline-color;
				transform: @lime-translate-center;
			}

			:global(.spotlight-input-mouse) & {
				&:hover:not([disabled]) {
					.knob {
						--lime-tooltip-offset: @cp-f-tooltip-offset;
					}

					.knob::before {
						height: @lime-slider-knob-width-large;
						width: @lime-slider-knob-width-large;
						border-radius: (@lime-slider-knob-width-large / 2);
					}
				}
			}

			.focus({
				.bar,
				.fill,
				.load {
					background-color: transparent;
				}

				.knob {
					--lime-tooltip-offset: @cp-f-tooltip-offset;
				}

				.knob::before {
					height: @lime-slider-knob-width-large;
					width: @lime-slider-knob-width-large;
					border-radius: (@lime-slider-knob-width-large / 2);
					background-color: var(--semantic-color-surface-default-focused);
					box-shadow: @lime-slider-handle-focused-shadow;
					transform: @lime-translate-center;
				}
			});
		}

		&.showAnchor {
			.progressBar {
				&::after {
					background-color: @lime-progressbar-track-color;
				}
			}
		}

		.minMax {
			color: @lime-slider-min-max-color;
		}
	});
}

.tooltip {
	// Offset tooltip origin because `.knob` centered tooltip within the progressbar (when tooltip original origin is at the edge of `.progressbar`).
	&.horizontal {
		&.above {
			transform: translateY(@lime-slider-tooltip-above-offset);
		}

		&.below {
			transform: translateY(@lime-slider-tooltip-below-offset);
		}
	}

	&.vertical {
		&.left,
		&.before,
		:global(.enact-locale-right-to-left) &.after {
			transform: translateX(@lime-slider-tooltip-before-offset);
		}

		&.right,
		&.after,
		:global(.enact-locale-right-to-left) &.before {
			transform: translateX(@lime-slider-tooltip-after-offset);
		}
	}
}

